--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -22,7 +22,14 @@
  <hr>
 
  <form action="{% url 'cadastro' %}" method="POST"> {% csrf_token %}
- <h2 class="fonte-destaque1">Cadastre-se</h2>
+    <h2 class="fonte-destaque1">Cadastre-se</h2>
+    {% if messages %}
+        {% for message in messages%}
+            <section class= "alert {{message.tags}}">
+                {{message}}
+            </section>
+        {% endfor %}    
+    {% endif %}
  <br>
 <label for="">Username</label>
  <input type="text" name="username" id="" class="form-control" placeholder="Username ...">
@@ -42,7 +49,7 @@
  </div>
 <br>
  <input type="submit" value="Cadastrar" class="btn btn-success btn-dark-color">
- <a href="#" class="btn btn-dark-color-outline">Já possuo uma conta</a>
+ <a href="{%url 'login' %}" class="btn btn-dark-color-outline">Já possuo uma conta</a>
  </form>
  </div>
  </div>
